syntax = "proto3";

package v1.nfpbv1;

import "v1/nfpb/msg_actor.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/v1/nfpb;nfpbv1";

message GetAllActorsRequest {
  int32 pageNumber = 1;
  int32 pageSize   = 2;
}

message GetAllActorsResponse {
  repeated Actor actors = 1;
}